opentreemap/treemap/css/sass/partials/pages/_importer.scss
#importer{

    h1{
        margin-top: 8px;
    }

    .top-pad-sm{
        padding-top: 14px;
    }

   .top-pad-lg{
        padding-top: 50px;
    }

   td.error {
        background-color: #f2dede;
   }

   td.warning {
        background-color: #fef4ad;
   }

   input {
       width: auto;
   }

   .tab-pane {
       min-height: auto;
   }

   .tab-contents{
      overflow-x: scroll;
      border-left: solid 1px #dddddd;
      border-right: solid 1px #dddddd;
      border-bottom: solid 1px #dddddd;
   }

    .btn-info{
      margin-right: 12px;
    }

    .no-bullet{
      list-style-type: none;
      padding-left: 0!important;
    }
}

